--- a/index.ipynb
+++ b/index.ipynb
@@ -94,9 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daniel = None # driver\n",
-    "meryl = None # driver\n",
-    "niky = None # passenger\n",
+    "daniel = Criver() # driver\n",
+    "meryl = driver() # driver\n",
+    "niky =  # passenger\n",
     "terrance = None # passenger"
    ]
   },
