Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,9 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daniel = Criver() # driver\n",
-    "meryl = driver() # driver\n",
-    "niky =  # passenger\n",
+    "daniel = Driver() # driver\n",
+    "meryl = Driver() # driver\n",
+    "niky =  Passenger()# passenger\n",
     "terrance = None # passenger"
    ]
   },
