--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polite_greeting = None\n",
+    "polite_greeting = daniel.polite_greeting\n",
     "print(polite_greeting)"
    ]
   },
