--- a/index.ipynb
+++ b/index.ipynb
@@ -109,11 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, how are you?\n"
+     ]
+    }
+   ],
    "source": [
-    "polite_greeting = daniel.polite_greeting\n",
+    "polite_greeting = daniel.greeting()\n",
     "print(polite_greeting)"
    ]
   },
@@ -123,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_time_to_talk = None\n",
+    "no_time_to_talk = N\n",
     "print(no_time_to_talk)"
    ]
   },
