--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,7 @@
     "# create Lion class\n",
     "class Lion():\n",
     "    def speak(self):\n",
-    "        return ''"
+    "        return 'roar'"
    ]
   },
   {
@@ -172,7 +172,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Tiger class"
+    "# create Tiger class\n",
+    "class Tiger():\n",
+    "    d"
    ]
   },
   {
