Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,8 @@
    "source": [
     "# create Tiger class\n",
     "class Tiger():\n",
-    "    d"
+    "    def speak(self):\n",
+    "        return 'growl'"
    ]
   },
   {
@@ -183,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Elephant class"
+    "# create Elephant class\n",
+    "class elephan"
    ]
   },
   {
