--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,9 @@
    "outputs": [],
    "source": [
     "# create Elephant class\n",
-    "class elephan"
+    "class Elephant():\n",
+    "    def speak(self):\n",
+    "        return ''"
    ]
   },
   {
