--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
     "# create Elephant class\n",
     "class Elephant():\n",
     "    def speak(self):\n",
-    "        return ''"
+    "        return 'eeeeyooop'"
    ]
   },
   {
@@ -203,9 +203,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = None\n",
-    "tony = None\n",
-    "dumbo = None"
+    "simba = Lion()\n",
+    "tony = Tiger()\n",
+    "dumbo = No"
    ]
   },
   {
