Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
    "source": [
     "simba = Lion()\n",
     "tony = Tiger()\n",
-    "dumbo = No"
+    "dumbo = Elephant()"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoo = None"
+    "zoo = "
    ]
   },
   {
