Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,12 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roar\n",
+      "growl\n",
+      "eeeeyooop\n"
+     ]
+    }
+   ],
    "source": [
     "for animal in zoo:\n",
-    "    print"
+    "    print(animal.speak())"
    ]
   },
   {
